Fixing Issue #3926
Username and password on the login page is not visible in Classic theme

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -874,6 +874,10 @@ ul#breadcrumbs {
 	padding-right: 6px;
 }
 
+.cactiLoginTable input {
+	border: 1px solid #006400 !important;
+}
+
 .loginErrors, .logoutErrors {
 	color: red;
 	min-height: 0px;
